# rustsystem

./: .env  .gitignore  CONTRIBUTE.md  Cargo.server.toml  Cargo.toml  Cargo.trustauth.toml  Dockerfile  Dockerfile.server  Dockerfile.trustauth  README.md  TODO.md  deploy.sh
.github/workflows/: ci.yml
api-core/: Cargo.toml
api-core/src/: lib.rs  mtls.rs  secret.rs
decrypt-tally/: Cargo.toml
decrypt-tally/src/: main.rs
frontend/: .cta.json  .gitignore  Dockerfile.e2e  README.md  TESTING.md  build.sh  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.js
frontend/e2e/: pages.spec.ts  voting.spec.ts
frontend/rustsystem-client/: .gitignore  Cargo.toml
frontend/rustsystem-client/src/: lib.rs  validation.rs
frontend/rustsystem-client/wrapper/: index.html
frontend/scripts/: run-e2e-docker.sh
frontend/src/: colors.css  main.tsx  result.ts  routeTree.gen.ts  styles.css  themes.json
frontend/src/api/: auth.ts  config.ts  createMeeting.ts  error.ts  host.ts  login.ts
frontend/src/api/common/: meetingSpecs.ts  state.ts  voteProgress.ts
frontend/src/api/host/: inviteEvent.ts  newVoter.ts  removeAll.ts  resetLogin.ts  state.ts  voterList.ts
frontend/src/components/: error.tsx  types.ts
frontend/src/routes/: __root.tsx  admin.tsx  create-meeting.tsx  dev-testing.tsx  encryption.tsx  guide.tsx  index.tsx  invite.tsx  login.tsx  meeting.tsx  meeting_.admin.tsx  preview.tsx  signature-dev.tsx
frontend/src/signatures/: signatures-test.ts  signatures.test.ts  signatures.ts  voteSession.ts
frontend/src/utils/: cryptoGen.ts  tallyDecrypt.ts  tallyExport.ts  wasm.ts
mtls/: .gitignore  mkcerts.sh
rustsystem-client/: Cargo.toml  README.md  build.sh
rustsystem-client/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
rustsystem-client/frontend/src/: auth.ts  colors.css  main.tsx  routeTree.gen.ts
rustsystem-client/frontend/src/api/: auth.ts  createMeeting.ts  error.ts  login.ts  newVoter.ts
rustsystem-client/frontend/src/api/common/: meetingSpecs.ts  state.ts
rustsystem-client/frontend/src/api/host/: inviteEvent.ts  newVoter.ts  resetLogin.ts  state.ts  voterList.ts
rustsystem-client/frontend/src/api/voter/: state.ts
rustsystem-client/frontend/src/components/: error.tsx  unauthorized.tsx
rustsystem-client/frontend/src/components/defaults/: footer.tsx  header.tsx
rustsystem-client/frontend/src/components/error-pages/: forbidden.tsx  not_found.tsx  unauthorized.tsx
rustsystem-client/frontend/src/components/invite/: run_invite.tsx
rustsystem-client/frontend/src/components/meeting/: host.tsx  vote_page.tsx  voter.tsx
rustsystem-client/frontend/src/components/meeting/host-page/: creation.tsx  tally.tsx  voting.tsx
rustsystem-client/frontend/src/components/meeting/host-widget/: floating-controls.tsx
rustsystem-client/frontend/src/components/meeting/vote-page/: dichotomous.tsx  register.tsx  voting.tsx
rustsystem-client/frontend/src/components/templates/: button.tsx  form.tsx  main.tsx  tiling_cards.tsx
rustsystem-client/frontend/src/routes/: about.tsx  contact.tsx  index.tsx  invite.tsx  login.tsx  meeting.tsx  new-meeting.tsx  vote.tsx
rustsystem-client/src/: lib.rs  registration.rs  utils.rs  validation.rs
rustsystem-client/wrapper/: index.html  index.js
rustsystem-core/: Cargo.toml
rustsystem-core/src/: lib.rs  logging.rs  mtls.rs  secret.rs  tokens.rs
rustsystem-proof/: Cargo.toml
rustsystem-proof/src/: ballot.rs  lib.rs
rustsystem-remote/: Cargo.toml  README.md  build.rs
rustsystem-remote/frontend/: package.json  pnpm-lock.yaml  vite.config.js
rustsystem-remote/frontend/src/: routeTree.gen.ts
rustsystem-remote/src/: lib.rs
rustsystem-server/: .gitignore  Cargo.toml  crypt-setup.sh
rustsystem-server-api/api-core/: Cargo.toml
rustsystem-server-api/api-core/src/: lib.rs
rustsystem-server-api/api-derive/: Cargo.toml
rustsystem-server-api/api-derive/src/: lib.rs
rustsystem-server/config/: server.cnf
rustsystem-server/src/: admin_auth.rs  invite_auth.rs  lib.rs  logging.rs  main.rs  session.rs  tally_encrypt.rs  tokens.rs  vote_auth.rs  voting.rs
rustsystem-server/src/api/: auth.rs  create_meeting.rs  limits.rs  login.rs  mod.rs  new_voter.rs  open_vote.rs  session_ids.rs  vote.rs
rustsystem-server/src/api/common/: common_responses.rs  meeting_specs.rs  meeting_specs_watch.rs  mod.rs  state.rs  vote_active.rs  vote_progress.rs  vote_progress_watch.rs  vote_state_watch.rs
rustsystem-server/src/api/host/: auth.rs  close_meeting.rs  end_vote_round.rs  get_all_tally.rs  get_tally.rs  invite_event.rs  invite_watch.rs  mod.rs  new_voter.rs  remove_all.rs  remove_voter.rs  reset_login.rs  start_invite.rs  start_vote.rs  state.rs  tally.rs  user_management.rs  voter_id.rs  voter_list.rs
rustsystem-server/src/api/voter/: auth.rs  mod.rs  state.rs  status.rs  vote.rs
rustsystem-server/src/api_trustauth/: is_voter.rs  mod.rs  vote_active.rs
rustsystem-server/src/proof/: ballot.rs  mod.rs
rustsystem-server/tests/: mod.rs
rustsystem-server/tests/common/: mod.rs
rustsystem-server/tests/e2e/: auth.rs  lifecycle.rs  mod.rs  registration.rs  start_vote.rs
rustsystem-server/tests/inprocess/: auth.rs  common_endpoints.rs  concurrency.rs  creation.rs  field_limits.rs  lifecycle.rs  management.rs  mod.rs  negative.rs  permissions.rs  qr_reader.rs  sequence.rs  state_machine.rs  voting.rs
rustsystem-trustauth/: Cargo.toml
rustsystem-trustauth/src/: lib.rs  main.rs  tokens.rs
rustsystem-trustauth/src/api/: is_registered.rs  login.rs  mod.rs  register.rs  start_round.rs  vote_data.rs
rustsystem-trustauth/src/api_server/: end_round.rs  mod.rs  start_round.rs
rustsystem-trustauth/tests/: mod.rs
rustsystem-trustauth/tests/common/: mod.rs
rustsystem-trustauth/tests/inprocess/: mod.rs  start_round.rs
scripts/: derive-keys.sh  test-rate-limit.sh
src/: app_state.rs  main.rs  router.rs
src/app_state/: meeting.rs
src/router/: admin.rs  voter.rs
templates/: admin.html  base.html  home.html  invite.html  vote_response.html  voter.html
(+53 files in other folders)
