[workspace]
members = [ "rustsystem-server", "rustsystem-proof", "rustsystem-client" , "rustsystem-server-api/api-derive", "rustsystem-server-api/api-core"]
resolver = "3"

[workspace.dependencies]
wasm-bindgen = "0.2.84"
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }

[workspace.package]
authors = [ "Felix Hellborg <felix.hellborg.la@gmail.com>", "Åke Amcoff <ake@amcoff.net>" ]
