[package]
name = "rustsystem"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
askama_web = { version = "0.14.6", features = ["axum-0.8"] }
axum = { version = "0.8.6", features = ["ws"] }
axum-extra = { version = "0.12.1", features = ["cookie"] }
base64 = "0.22.1"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
