[workspace]
members = ["rustsystem-server", "rustsystem-core", "decrypt-tally", "rustsystem-trustauth"]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }

[workspace.package]
authors = [ "Felix Hellborg <felix.hellborg.la@gmail.com>", "Åke Amcoff <ake@amcoff.net>" ]
