[package]
name = "api-core"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum.workspace = true
base64 = "0.22.1"
chrono = "0.4.41"
hyper = "1.8.1"
hyper-util = "0.1.20"
rand = "0.9.1"
reqwest = "0.13.2"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
serde.workspace = true
serde_json = "1.0.140"
tokio = "1.49.0"
tokio-rustls = "0.26.4"
tower = "0.5.3"
