[package]
name = "rustsystem-core"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[dependencies]
async-trait = "0.1.89"
axum.workspace = true
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
hyper = "1.8.1"
hyper-util = "0.1.20"
rand = "0.9.1"
reqwest = "0.13.2"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
serde.workspace = true
tokio = "1.49.0"
tokio-rustls = "0.26.4"
tower = "0.5.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
tracing-appender = "0.2"
