[package]
name = "rustsystem-proof"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
blake3 = "1.8.2"
bls12_381_plus = "0.8.18"
getrandom = { version = "0.2.16", features = ["js"] }
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zkryptium = "0.5.0"
