[package]
name = "rustsystem-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Server framework and helpers
axum.workspace = true
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-extra = { version = "0.10.1", features = ["cookie"]}
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Local (part of workspace)
rustsystem-proof = { path = "../rustsystem-proof" }

# Misc
zkryptium = "0.5.0"
hex = "0.4.3"
rand = "0.9.1"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
base64 = "0.22.1"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing = "0.1.41"
qrcode = "0.14.1"
bls12_381_plus = "0.8.18"
