[package]
name = "rustsystem-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Server framework and helpers
axum.workspace = true
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-extra = { version = "0.10.1", features = ["cookie"]}
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.4", features = ["fs", "trace", "set-header"] }
serde.workspace = true
serde_json = "1.0.140"

# Local (part of workspace)
rustsystem-proof = { path = "../rustsystem-proof" }
api-core = { path = "../rustsystem-server-api/api-core"}
api-derive = { path = "../rustsystem-server-api/api-derive"}

# Misc
zkryptium = "0.5.0"
hex = "0.4.3"
rand = "0.9.1"
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
base64 = "0.22.1"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing = "0.1.41"
qrcode = "0.14.1"
bls12_381_plus = "0.8.18"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }

[dev-dependencies]
tower = "0.5.2"
http-body-util = "0.1.3"
usvg = "0.44"
resvg = "0.44"
tiny-skia = "0.11"
image = "0.24.9"
rqrr = "0.6"
anyhow = "1"
url = "2"
