[package]
name = "rustsystem-trustauth"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[dependencies]
axum.workspace = true
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-extra = { version = "0.10.1", features = ["cookie"]}
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.4", features = ["fs", "trace", "set-header", "cors"] }
serde.workspace = true
serde_json = "1.0.140"

# Local (part of workspace)
rustsystem-core = { path = "../rustsystem-core"}

# Misc
zkryptium = "0.5.0"
hex = "0.4.3"
rand = "0.9.1"
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
base64 = "0.22.1"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing = "0.1.41"
qrcode = "0.14.1"
bls12_381_plus = "0.8.18"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures = "0.3.31"
futures-util = "0.3.31"
time = { version = "0.3", features = ["serde"] }
blake3 = "1.8.3"
x25519-dalek = "2"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
reqwest = { version = "0.13.2", features = ["json"] }
async-trait = "0.1.89"
anyhow = "1.0.102"
