[package]
name = "rustsystem-trustauth"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[dependencies]
axum.workspace = true
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-extra = { version = "0.10.1", features = ["cookie"]}
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["fs", "trace", "set-header", "cors"] }
serde.workspace = true
serde_json = "1.0.140"

# Local (part of workspace)
rustsystem-core = { path = "../rustsystem-core"}

# Misc
zkryptium = "0.5.0"
rand = "0.9.1"
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing = "0.1.41"
bls12_381_plus = "0.8.18"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
async-trait = "0.1.89"
anyhow = "1.0.102"
