[package]
name = "api-derive"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["parsing", "proc-macro", "derive"] }
proc-macro2 = "1.0.101"
quote = "1.0.40"
api-core = { path = "../api-core" }
chrono = "0.4.41"
